--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "realtime-track",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "engines": {
     "node": "20.x"
   },
